[gd_scene load_steps=12 format=3 uid="uid://dhkxc2d2wglyh"]

[ext_resource type="Theme" uid="uid://d37xjde3q7k3t" path="res://assets/ui/theme.tres" id="1_kyawl"]
[ext_resource type="Script" path="res://scenes/ui/tutorial.gd" id="1_psnm1"]
[ext_resource type="FontFile" uid="uid://dliopqakpw553" path="res://fonts/Jacquard24-Regular.ttf" id="3_5g0yp"]
[ext_resource type="VideoStream" path="res://video/tutorial_1.ogv" id="4_5lvjs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qjpq3"]
bg_color = Color(0, 0, 0, 0.686275)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y4mpi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nephs"]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.0392157, 0.164706, 0.2, 1)

[sub_resource type="InputEventKey" id="InputEventKey_r4p32"]
keycode = 4194319

[sub_resource type="Shortcut" id="Shortcut_h38a2"]
events = [SubResource("InputEventKey_r4p32")]

[sub_resource type="InputEventKey" id="InputEventKey_1cm7g"]
keycode = 4194321

[sub_resource type="Shortcut" id="Shortcut_egc8o"]
events = [SubResource("InputEventKey_1cm7g")]

[node name="Tutorial" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_kyawl")
script = ExtResource("1_psnm1")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qjpq3")

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/CenterContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Title" type="Label" parent="PanelContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_5g0yp")
theme_override_font_sizes/font_size = 120
text = "Tutorial"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
theme_override_styles/separator = SubResource("StyleBoxEmpty_y4mpi")

[node name="Text" type="Label" parent="PanelContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
text = "Build a factory to craft items."
vertical_alignment = 1
autowrap_mode = 3

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_nephs")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="PanelContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
stream = ExtResource("4_5lvjs")
autoplay = true
loop = true

[node name="HFlowContainer" type="HFlowContainer" parent="PanelContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HFlowContainer"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2

[node name="BackButton" type="Button" parent="PanelContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HFlowContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
mouse_default_cursor_shape = 2
shortcut = SubResource("Shortcut_h38a2")
shortcut_in_tooltip = false
text = "Back"

[node name="PageNumber" type="Label" parent="PanelContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HFlowContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "5 / 500"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer2" type="CenterContainer" parent="PanelContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HFlowContainer"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2

[node name="NextButton" type="Button" parent="PanelContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HFlowContainer/CenterContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
mouse_default_cursor_shape = 2
shortcut = SubResource("Shortcut_egc8o")
shortcut_in_tooltip = false
text = "Next"

[connection signal="pressed" from="PanelContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HFlowContainer/CenterContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="PanelContainer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HFlowContainer/CenterContainer2/NextButton" to="." method="_on_next_button_pressed"]
